plugins {
    id 'application'
}

dependencies {
    implementation project(':model')
    implementation 'ch.epfl.scala:bsp4j:2.1.0-M4'
    implementation 'org.apache.commons:commons-lang3:3.13.0'

    testImplementation(platform('org.junit:junit-bom:5.9.2'))
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.3.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.0'
}

java {
  sourceCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'com.microsoft.java.bs.core.Launcher'
}

jar {
  metaInf {
    from 'src/main/resources/NOTICE.txt'
  }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

task generateInitScript() {
  doLast {
    def initScript = file("$buildDir/libs/plugins/init.gradle")
    initScript.parentFile.mkdirs()
    initScript.write """
      initscript {
        dependencies {
          classpath files('plugin.jar')
        }
      }
      allprojects {
        apply plugin: com.microsoft.java.bs.gradle.plugin.GradleBuildServerPlugin
      }
      """
  }
}

task copyRuntimeLibs(type: Copy) {
  from configurations.runtimeClasspath
  into "$buildDir/libs/runtime"
}

processResources {
  dependsOn(':plugin:copyJar')
  dependsOn copyRuntimeLibs
  dependsOn(':server:generateInitScript')
  duplicatesStrategy = 'include'
  exclude 'NOTICE.txt'
}
